--- a/galaxy.yml
+++ b/galaxy.yml
@@ -3,10 +3,10 @@
 # The namespace of the collection. This can be a company/brand/organization or product namespace under which all
 # content lives. May only contain alphanumeric lowercase characters and underscores. Namespaces cannot start with
 # underscores or numbers and cannot contain consecutive underscores
-namespace: k3s
+namespace: vrsarin
 
 # The name of the collection. Has the same character restrictions as 'namespace'
-name: orchestration
+name: k3s-ansible
 
 # The version of the collection. Must be compatible with semantic versioning
 version: 1.0.0
@@ -23,6 +23,7 @@ authors:
   - Jeff Geerling <geerlingguy@mac.com>
   - Staf Wagemakers <staf@wagemakers.be>
   - Vincent RABAH <vincent.rabah@gmail.com>
+  - Vivek Sarin <vivek@sarins.info>
 
 ### OPTIONAL but strongly recommended
 # A short summary description of the collection
