--- a/galaxy.yml
+++ b/galaxy.yml
@@ -40,7 +40,7 @@ license:
 
 # A list of tags you want to associate with the collection for indexing/searching. A tag name has the same character
 # requirements as 'namespace' and 'name'
-tags: ['infrastructure', 'linux', 'tools']
+tags: ["infrastructure", "linux", "tools"]
 
 # Collections that this collection requires to be installed for it to be usable. The key of the dict is the
 # collection label 'namespace.name'. The value is a version range
@@ -54,7 +54,7 @@ dependencies:
 repository: https://github.com/k3s-io/k3s-ansible
 
 # The URL to any online docs
-documentation: https://github.com/k3s-io/k3s-ansible/blob/master/README.md
+documentation: https://github.com/vrsarin/k3s-ansible/blob/release/docs
 
 # The URL to the homepage of the collection/project
 homepage: https://github.com/k3s-io/k3s-ansible
@@ -66,7 +66,18 @@ issues: https://github.com/k3s-io/k3s-ansible/issues
 # artifact. A pattern is matched from the relative path of the file or directory of the collection directory. This
 # uses 'fnmatch' to match the files or directories. Some directories and files like 'galaxy.yml', '*.pyc', '*.retry',
 # and '.git' are always filtered. Mutually exclusive with 'manifest'
-build_ignore: ["ansible.cfg"]
+build_ignore:
+  - "inventory.yml"
+  - "inventory-sample.yml"
+  - "ansible.cfg"
+  - ".ansible-lint"
+  - ".gitattributes"
+  - ".github"
+  - ".yamllint"
+  - ".vscode"
+  - "playbook"
+  - "Vagrantfile"
+  
 # A dict controlling use of manifest directives used in building the collection artifact. The key 'directives' is a
 # list of MANIFEST.in style
 # L(directives,https://packaging.python.org/en/latest/guides/using-manifest-in/#manifest-in-commands). The key
